[package]
name = "check_timed_logs_fast"
version = "0.1.0"
authors = ["cmichi <mich@elmueller.net>"]
license = "MIT"
description = "A nagios plugin which monitors log files for the occurrence of regular expressions."
homepage = "https://github.com/cmichi/check_timed_logs_fast"
repository = "https://github.com/cmichi/check_timed_logs_fast"
keywords = ["nagios", "icinga", "icinga2", "log", "check"]
documentation = "https://cmichi.github.io/check_timed_logs_fast/check_timed_logs_fast/index.html"

[dependencies]
chrono = "0.4"
memmap = "0.5"
time = "0.1.40"
glob = "0.2.11"
tempfile = "3.0.4"
filetime = "0.2.1"
fancy-regex = "0.1.0"
